# autorestify

./: .gitignore  README.md  cli.py  pyproject.toml  sample2.json
generator/: endpoint_generator.py  model_generator.py  route_generator.py  test_generator.py
templates/: endpoint.j2  endpoint_func.j2  endpoint_header.j2  model.j2  router.j2  test_func.j2
utils/: json_parser.py
