[tool.poetry]
name = "autorestify"
version = "0.1.0"
description = "CLI tool to auto-generate FastAPI endpoints from JSON"
authors = ["Hossam Hassan <hossamhsn74@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "generator" },
    { include = "utils" }
]
include = ["templates/**/*"]

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.9.0"
jinja2 = "^3.1.2"

[tool.poetry.scripts]
autorestify = "cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
